@@ -1,5 +1,6 @@
 28/6/13 started 7.34.1
 - fix morphological operators on non-uchar images
+- remove any ICC profile when we use vips to go to srgb
 
 7/6/13 started 7.34.0
 - version bump
